--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
 		"deploy": "gh-pages -d build -t true"
-
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
@@ -27,6 +26,7 @@
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"gh-pages": "^6.1.1",
 		"globals": "^15.0.0",
 		"postcss": "^8.4.39",
 		"prettier": "^3.1.1",
